--- a/clock/index.html
+++ b/clock/index.html
@@ -514,7 +514,7 @@
 					setTimeout(function() { createNote("Mangat Din ngepush course javascriptnya :v"); }, 5000);
 				}
 				else if(localStorage.getItem("manualColor")=="#000000"){
-					setTimeout(function() { createNote("Buat belajar bro, bukan buat neko neko :v"); }, 5000);
+					setTimeout(function() { createNote("JADIIAN KUY:v"); }, 5000);
 				}
 			}
 			function createNote(isi){
