--- a/somebody/index.html
+++ b/somebody/index.html
@@ -475,7 +475,10 @@
 						Aku sejak lama suka padamu.
 					</div>
 					<div class="mycontent">
-						Maukah kau menjadi orang yang selalu ada disisiku, yang selalu ada disaat senang ataupun susah, yang selalu ada sampai akhir hayatku?
+						Mungkin ini sebuah kalimat yang cukup simpel, kalimat yang menyimpan banyak juga keraguan didalam nya, ada harapan yang ingin rasa itu tidak jatuh sendirian,
+						udah terlalu lama rasa itu ada, karena sudah terlalu lelah kalau harus disimpan lebih lama :) 
+						jika tere merasakan hal yang sama, aku sangat senang untuk mengambil langkah selanjutnya
+						may i be your boyfriend?
 					</div>
 					<div class="mybutton">
 						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >tidak</div>
@@ -763,7 +766,7 @@
 				else if(h>18)tulis('petang','selamat menikmati senja');
 				else if(h>14)tulis('sore','selamat menjalani hari');
 				else if(h>13)tulis('siang','tetap semangat')
-				else if(h>9)tulis('siang','selamat bekerja')
+				else if(h>9)tulis('siang','semangat beraktivitas')
 				else if(h>4)tulis('pagi','selamat beraktivitas');
 				else tulis('malam','seharusnya kamu sudah tidur');
 				selesai=true;
@@ -803,7 +806,7 @@
 					else if(h>17)tulis('petang','selamat menikmati senja');
 					else if(h>14)tulis('sore','selamat menjalani hari');
 					else if(h>13)tulis('siang','tetap semangat')
-					else if(h>9)tulis('siang','selamat bekerja')
+					else if(h>9)tulis('siang','semangat beraktivitas')
 					else if(h>4)tulis('pagi','selamat beraktivitas');
 					else tulis('malam','seharusnya kamu sudah tidur');
 					if(h>18)     document.querySelector('img').src="wp1.png";
