--- a/somebody/index.html
+++ b/somebody/index.html
@@ -475,9 +475,9 @@
 						Aku sejak lama suka padamu.
 					</div>
 					<div class="mycontent">
-						Mungkin ini sebuah kalimat yang cukup simpel, kalimat yang menyimpan banyak juga keraguan didalam nya, ada harapan yang ingin rasa itu tidak jatuh sendirian,
+						Mungkin ini sebuah kalimat yang cukup simpel, kalimat yang menyimpan banyak juga keraguan didalam nya,ada harapan yang ingin rasa itu tidak jatuh sendirian,
 						udah terlalu lama rasa itu ada, karena sudah terlalu lelah kalau harus disimpan lebih lama :) 
-						jika tere merasakan hal yang sama, aku sangat senang untuk mengambil langkah selanjutnya
+						jika tere merasakan hal yang sama, aku sangat senang untuk mengambil langkah selanjutnya.
 						may i be your boyfriend?
 					</div>
 					<div class="mybutton">
