--- a/somebody/index.html
+++ b/somebody/index.html
@@ -481,8 +481,8 @@
 						may i be your boyfriend?
 					</div>
 					<div class="mybutton">
-						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >tidak</div>
-						<div class="mybuttonyes" onclick="playVid()">iya</div>
+						<div class="mybuttonyes" onclick="playVid()">yes</div>
+						<div class="mybuttonno" onmouseover="move()" onclick="move2()" >no</div>
 					</div>
 				</div>
 				<div class="myresize"></div>
